--- a/src/debian/changelog
+++ b/src/debian/changelog
@@ -1,5 +1,5 @@
-snander (1.6.2-1) UNRELEASED; urgency=medium
+snander (1.7-1) UNRELEASED; urgency=medium
 
-  * Added correction table address size for Microwire EEPROM.
+  * New progress status, counter elapsed time and more cosmetic fixes.
 
- -- McMCC <mcmcc@mail.ru>  Sun, 28 Feb 2021 20:26:12 +0800
+ -- McMCC <mcmcc@mail.ru>  Wed, 3 Mar 2021 05:34:12 +0800
