--- a/src/debian/changelog
+++ b/src/debian/changelog
@@ -1,6 +1,5 @@
-snander (1.7.4-1) UNRELEASED; urgency=medium
+snander (1.7.5-1) UNRELEASED; urgency=medium
 
-  * Add new SPI NAND flash GIGADEVICE GD5F1GQ5UE and GD5F1GQ5RE(1.8V).
-  * Update progress bar once per second for SPI flash programming.
+  * Add new SPI NOR flash MD25D20/MD25D40/BY25D10/BY25D20/BY25D40/BY25D80/YC25Q128.
 
- -- McMCC <mcmcc@mail.ru>  Sun, 26 December 2021 04:20:12 +0800
+ -- McMCC <mcmcc@mail.ru>  Thu, 10 February 2022 23:30:12 +0800
