update README and Changelog

--- a/src/debian/changelog
+++ b/src/debian/changelog
@@ -1,5 +1,6 @@
 snander (1.7.5-1) UNRELEASED; urgency=medium
 
   * Add new SPI NOR flash MD25D20/MD25D40/BY25D10/BY25D20/BY25D40/BY25D80/YC25Q128.
+  * Add new SPI NOR flash W25Q256JW/W25Q256JWIM/W25Q512JV/W25Q512JVIM/W25Q512NW/W25Q512NWIM.
 
- -- McMCC <mcmcc@mail.ru>  Thu, 10 February 2022 23:30:12 +0800
+ -- McMCC <mcmcc@mail.ru>  Thu, 26 May 2022 19:00:12 +0800
