--- a/src/debian/changelog
+++ b/src/debian/changelog
@@ -1,7 +1,8 @@
-snander (1.7.5-1) UNRELEASED; urgency=medium
+snander (1.7.6-1) UNRELEASED; urgency=medium
 
-  * Add new SPI NOR flash MD25D20/MD25D40/BY25D10/BY25D20/BY25D40/BY25D80/YC25Q128/MX25L8005M/XT25Q128D.
-  * Add new SPI NOR flash W25Q256JW/W25Q256JWIM/W25Q512JV/W25Q512JVIM/W25Q512NW/W25Q512NWIM/EN25Q256.
-  * Add new SPI NAND flash FS35ND02G-S3Y2/FS35ND04G-S2Y2/XCSP1AAWH-NT/MX35LF2GE4AD/W25N02KV/W25M02GV.
+  * Add S25FL016P SPI NOR flash support.
+  * Fix exit value with errors.
+  * Add initial support SPI EEPROM (Not tested).
+  * Update SNAND API, add manual set OOB size with disable internal ECC.
 
- -- McMCC <mcmcc@mail.ru>  Wed, 20 Jul 2022 19:00:12 +0800
+ -- McMCC <mcmcc@mail.ru>  Mon, 5 Dec 2022 12:00:12 +0800
