--- a/src/debian/changelog
+++ b/src/debian/changelog
@@ -1,8 +1,6 @@
-snander (1.7.7-1) UNRELEASED; urgency=medium
+snander (1.7.8-1) UNRELEASED; urgency=medium
 
-  * Add 251024 SPI EEPROM support.
-  * Add option to set page size of SPI EEPROM for fast write.
-  * Add S25FL512S SPI NOR support.
-  * Many fix code.
+  * Updated libusb version to v1.0.26.
+  * Added -k option to skip BAD blocks or pages when reading and writing NAND flash.
 
- -- McMCC <mcmcc@mail.ru>  Sun, 25 Dec 2022 12:30:12 +0800
+ -- McMCC <mcmcc@mail.ru>  Sat, 14 Jan 2023 05:40:12 +0800
