--- a/src/debian/changelog
+++ b/src/debian/changelog
@@ -2,6 +2,7 @@ snander (1.7.8-1) UNRELEASED; urgency=medium
 
   * Update libusb version to v1.0.26.
   * Add -k option to skip BAD blocks or pages when reading and writing NAND flash.
+  * Add M25P05/M25P10/M25P20/M25P40/M25P80/M25P32/M25P64/N25Q016A/N25Q512A SPI NOR Flash support.
   * Add P25D05H/P25D10H/P25D20H/P25D40H/P25D80H/PY25Q128HA SPI NOR Flash support.
   * Add NM25Q32E/NM25Q64E/NM25Q128E/NM25L256F SPI NOR Flash support.
   * Add FORESEE FS35ND01GS1Y2 SPI NAND Flash support.
@@ -11,4 +12,4 @@ snander (1.7.8-1) UNRELEASED; urgency=medium
   * Add WINBOND W25N01GW SPI NAND Flash support.
   * Fix when SPI_NAND_FLASH_DEBUG is enabled.
 
- -- McMCC <mcmcc@mail.ru>  Mon, 5 Jun 2023 10:36:12 +0800
+ -- McMCC <mcmcc@mail.ru>  Thu, 8 Jun 2023 12:33:12 +0800
