--- a/src/debian/changelog
+++ b/src/debian/changelog
@@ -1,6 +1,7 @@
 snander (1.7.8-1) UNRELEASED; urgency=medium
 
   * Update libusb version to v1.0.26.
+  * Add W25Q64JVIM SPI NOR Flash support.
   * Add -k option to skip BAD blocks or pages when reading and writing NAND flash.
   * Add M25P05/M25P10/M25P20/M25P40/M25P80/M25P32/M25P64/N25Q016A/N25Q512A SPI NOR Flash support.
   * Add P25D05H/P25D10H/P25D20H/P25D40H/P25D80H/PY25Q128HA SPI NOR Flash support.
@@ -12,4 +13,4 @@ snander (1.7.8-1) UNRELEASED; urgency=medium
   * Add WINBOND W25N01GW SPI NAND Flash support.
   * Fix when SPI_NAND_FLASH_DEBUG is enabled.
 
- -- McMCC <mcmcc@mail.ru>  Wed, 2 Aug 2023 17:21:12 +0800
+ -- McMCC <mcmcc@mail.ru>  Thu, 31 Aug 2023 15:27:12 +0800
