Update libusb version to 1.0.27 and sync upstream code to fix warning

--- a/src/debian/changelog
+++ b/src/debian/changelog
@@ -1,6 +1,6 @@
 snander (1.7.8-1) UNRELEASED; urgency=medium
 
-  * Update libusb version to v1.0.26.
+  * Update libusb version to v1.0.27.
   * Add GD25F256F SPI NOR Flash support.
   * Add W25Q64JVIM SPI NOR Flash support.
   * Add MX25L4005A SPI NOR Flash support.
@@ -14,7 +14,8 @@ snander (1.7.8-1) UNRELEASED; urgency=medium
   * Add ESMT F50D1G41LB(2M) SPI NAND Flash support.
   * Add MXIC MX35LF2G14AC SPI NAND Flash support.
   * Add WINBOND W25N01GW SPI NAND Flash support.
+  * Fix Warning: dangling pointer to 'tmp' may be used.
   * Fix print size in KB when size is less than 1MB.
   * Fix when SPI_NAND_FLASH_DEBUG is enabled.
 
- -- McMCC <mcmcc@mail.ru>  Mon, 4 Mar 2024 16:33:00 +0800
+ -- McMCC <mcmcc@mail.ru>  Wed, 3 Apr 2024 09:48:31 +0800
