Add XTX XT26G02C SPI NAND Flash support

--- a/src/debian/changelog
+++ b/src/debian/changelog
@@ -14,7 +14,7 @@ snander (1.7.8-1) UNRELEASED; urgency=medium
   * Add ESMT F50D1G41LB(2M) SPI NAND Flash support.
   * Add MXIC MX35LF2G14AC SPI NAND Flash support.
   * Add WINBOND W25N01GW SPI NAND Flash support.
-  * Add XTX XT26G02E SPI NAND Flash support.
+  * Add XTX XT26G02C/XT26G02E SPI NAND Flash support.
   * Fix Warning: dangling pointer to 'tmp' may be used.
   * Fix print size in KB when size is less than 1MB.
   * Fix when SPI_NAND_FLASH_DEBUG is enabled.
