--- a/src/debian/changelog
+++ b/src/debian/changelog
@@ -2,7 +2,7 @@ snander (1.7.8-1) UNRELEASED; urgency=medium
 
   * Update libusb version to v1.0.27.
   * Add GD25F256F SPI NOR Flash support.
-  * Add W25Q64JVIM SPI NOR Flash support.
+  * Add W25Q64JVIM/W25Q64JWIM SPI NOR Flash support.
   * Add MX25L4005A SPI NOR Flash support.
   * Add MX25U Series SPI NOR Flash support.
   * Add -k option to skip BAD blocks or pages when reading and writing NAND flash.
@@ -23,4 +23,4 @@ snander (1.7.8-1) UNRELEASED; urgency=medium
   * Fix print size in KB when size is less than 1MB.
   * Fix when SPI_NAND_FLASH_DEBUG is enabled.
 
- -- McMCC <mcmcc@mail.ru>  Wed, 20 Jul 2024 02:54:31 +0800
+ -- McMCC <mcmcc@mail.ru>  Mon, 30 Sep 2024 18:18:31 +0800
