--- a/src/debian/changelog
+++ b/src/debian/changelog
@@ -2,6 +2,7 @@ snander (1.7.8-1) UNRELEASED; urgency=medium
 
   * Update libusb version to v1.0.27.
   * Add GD25F256F SPI NOR Flash support.
+  * Add DQ25Q128AL SPI NOR Flash support.
   * Add W25Q64JVIM/W25Q64JWIM SPI NOR Flash support.
   * Add MX25L4005A SPI NOR Flash support.
   * Add MX25U Series SPI NOR Flash support.
@@ -26,4 +27,4 @@ snander (1.7.8-1) UNRELEASED; urgency=medium
   * Fix print size in KB when size is less than 1MB.
   * Fix when SPI_NAND_FLASH_DEBUG is enabled.
 
- -- McMCC <mcmcc@mail.ru>  Fri, 8 Nov 2024 19:24:46 +0800
+ -- McMCC <mcmcc@mail.ru>  Fri, 15 Nov 2024 01:03:32 +0800
