--- a/src/debian/changelog
+++ b/src/debian/changelog
@@ -18,9 +18,9 @@ snander (1.7.8-1) UNRELEASED; urgency=medium
   * Add GigaDevice GD5F1GM7UE/GD5F1GM7RE/GD5F2GM7UE/GD5F2GM7RE SPI NAND Flash support.
   * Add HEYANG HYF1GQ4UTACAE/HYF2GQ4UTACAE SPI NAND Flash support.
   * Add MICRON MT29F1G01AA/MT29F2G01AA/MT29F4G01AA/MT29F2G01ABA/MT29F2G01ABB SPI NAND Flash support.
-  * Add WINBOND W25N01GW/W25N04KV SPI NAND Flash support.
-  * Add FORESEE FS35ND01GS1Y2 SPI NAND Flash support.
-  * Add DS DS35M1GA/DS35M2GA SPI NAND Flash support.
+  * Add WINBOND W25N01GW/W25N04KV/W25N04KW SPI NAND Flash support.
+  * Add FORESEE FS35ND01GS1Y2/F35UQA512M/F35UQA001G SPI NAND Flash support.
+  * Add DS DS35M1GA/DS35M2GA/DS35Q2GB/DS35M2GB SPI NAND Flash support.
   * Add ESMT F50D1G41LB(2M) SPI NAND Flash support.
   * Add XTX XT26G02C SPI NAND Flash support.
   * Add FM FM25S02A SPI NAND Flash support.
@@ -28,4 +28,4 @@ snander (1.7.8-1) UNRELEASED; urgency=medium
   * Fix print size in KB when size is less than 1MB.
   * Fix when SPI_NAND_FLASH_DEBUG is enabled.
 
- -- McMCC <mcmcc@mail.ru>  Sat, 7 Dec 2024 14:18:12 +0800
+ -- McMCC <mcmcc@mail.ru>  Sun, 16 Feb 2025 18:21:37 +0800
