--- a/src/debian/changelog
+++ b/src/debian/changelog
@@ -6,10 +6,11 @@ snander (1.7.8-1) UNRELEASED; urgency=medium
   * Add DQ25Q128AL SPI NOR Flash support.
   * Add W25Q64JVIM/W25Q64JWIM SPI NOR Flash support.
   * Add MX25L4005A SPI NOR Flash support.
+  * Add EN25XQ128A SPI NOR Flash support.
   * Add MX25U Series SPI NOR Flash support.
   * Add -k option to skip BAD blocks or pages when reading and writing NAND flash.
   * Add M25P05/M25P10/M25P20/M25P40/M25P80/M25P32/M25P64/N25Q016A/N25Q512A SPI NOR Flash support.
-  * Add P25D05H/P25D10H/P25D20H/P25D40H/P25D80H/PY25Q128HA SPI NOR Flash support.
+  * Add P25D05H/P25D10H/P25D20H/P25D40H/P25D80H/PY25Q64HA/PY25Q128HA SPI NOR Flash support.
   * Add some SPI NOR Flash from EXCELSEMI/ONSEMI/ZETTA/PCT Manufacturers.
   * Add MXIC MX35LF1G24AD/MX35LF2G24AD/MX35LF4G24AD/MX35LF2G24AD-Z4I8/MX35LF4G24AD-Z4I8 SPI NAND Flash support.
   * Add MXIC MX35LF2G14AC/MX35UF1GE4AD/MX35UF2GE4AD/MX35UF4GE4AD SPI NAND Flash support.
@@ -28,4 +29,4 @@ snander (1.7.8-1) UNRELEASED; urgency=medium
   * Fix print size in KB when size is less than 1MB.
   * Fix when SPI_NAND_FLASH_DEBUG is enabled.
 
- -- McMCC <mcmcc@mail.ru>  Sun, 16 Feb 2025 19:29:32 +0800
+ -- McMCC <mcmcc@mail.ru>  Wed, 5 Mar 2025 23:57:34 +0800
